# digest-lm

./: .gitignore  README.md  app.py  pyproject.toml  raw_github_content.txt
dashboard/: package-lock.json  package.json
dashboard/app/dashboard/: page.tsx
dashboard/components/: app-sidebar.tsx  section-cards.tsx  site-header.tsx
scripts/py/: get_list_of_curl_scripts.py
scripts/sh/: ryankanno-nyc-restaurant-inspections-api.sh  start_fastapi_server.sh
src/digest_lm/: __init__.py  inference.py  terminal_client.py
static/: ryankanno-nyc-restaurant-inspections-api.txt
