[project]
name = "digest-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.82.1",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.12",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
